<resources>
    <string name="app_name">Layouts</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="recycler_view">Recycler View</string>
    <string name="layouts_menu">LAYOUTS MENU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
</resources>